[package]
name = "ghe2d"
version = "0.0.6"
rust-version = "1.77"
edition = "2021"
description = "A tool easy to make shapes"
readme = "README.md"
license = "ISC"
keywords = ["canvas", "shapes", "2d"]
authors = ["Hlever hlever.dev@gmail.com"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE.md"
]

[dependencies]
image = "0.25.2"
raqote = "0.8.5"
rusttype = "0.9.3"
regex = "1.10.6"
ar-reshaper = "1.5.0"
reqwest = { version = "0.12.7", features = ["blocking"] }
num-integer = "0.1.46"
png = "0.17.13"
libwebp-sys = "0.10.0"